apps/log680/overlays/prod/patch-images.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log680
spec:
  template:
    spec:
      containers:
        - name: metrics
          image: docker.io/funnyadd/metrics-a25-grp1-eq10:prod-00000000000000-deadbee
          # {"$imagepolicy": "flux-system:metrics-staging"}
        - name: mobilitysoft
          image: docker.io/funnyadd/mobilitysoft:prod-00000000000000-deadbee
          # {"$imagepolicy": "flux-system:mobilitysoft-staging"}
